# kasetsu

./: README.md
analysis/feedback_analysis/: SLEEP_count_over_30.csv  WAKE_UP_count_over_30.csv  active_accounts.csv  do_query.py  plot.py  plot2.py  plot3.py  query.sql  query.str  query_total_count.sql  sleep_complaints.txt  sleep_complaints2.txt  timelinecounts.sql  timelinecounts.txt  timelinecounts2.txt  wake_complaints.txt  wake_complaints2.txt
analysis/neural_net_analysis/: A_group.csv  B_group.csv  active_accounts_march_2016.csv000  do_analysis.py  get_A_group_complaint_count.sql  get_B_group_complaint_count.sql  get_group_complaint_count.str  randomize_users.py
analysis/neuralnet_large_ab_test/: all_group.csv  do_analysis.py  get_group_complaint_count.str
analysis/off_bed_filter_analysis/: A_group.csv  B_group.csv  do_analysis.py  get_group_complaint_count.str  get_numbers.sh  most_active_500.csv
analysis/office_crew_pill_counts/: plot.py  query.sql  results.csv
analysis/prox_pill_study1/: do_analysis.py  get_prox_data.str
audio/: clusterfeats.py  hmm  print_hmm_initializer.py  train_audio_hmm.py
audio/HelloGrammar/: pom.xml  readme.txt
audio/acoustic_model/: ctc.py  ctc2.py  decode_phonemes.py  get_symbols.py  hello_audio_feats.py
audio/audio_nulls/: plot_nulls.py
audio/download_server_audio/: accounts.txt  adpcm  compare_snr.py  convert_adpcm_to_wav.sh  convert_raw_to_wav.sh  debug.py  grab_raw.sh  main.go  play.sh  transcribe.py
audio/lfsr/: CMakeLists.txt  conv_ref.py  correlate_reference.py  main_bpsk.cpp  main_quad_correlator.cpp  main_test.cpp  main_white_noise.cpp  pn.c  pn.h
audio/plot_tools/: plot_bin_file.py  plot_feats_file.py  process_feats_file_s3.py
audio/server/: ConvertToPcm.sh  runme.sh  server.py
audio/twentyhz/: make_rocking_beats.py
audio_nulls/: plot_nulls.py
bots/device_id_watchdog/: watch_for_devices.py
cpphmm/alphabet/: .CMakeLists.txt.swp  CMakeLists.txt  CommonTypes.h  DataFile.cpp  DataFile.h  ModelFile.cpp  ModelFile.h  MotionSequenceForbiddenTransitions.cpp  MotionSequenceForbiddenTransitions.h  main.cpp  online_hmm.pb.cc  online_hmm.pb.h
cpphmm/cmake/: FindPLplot.cmake
cpphmm/src/: AllModels.cpp  AllModels.h  CMakeLists.txt  CompatibilityTypes.h  CompositeModel.cpp  CompositeModel.h  Ensemble.cpp  Ensemble.h  HiddenMarkovModel.cpp  HiddenMarkovModel.h  HmmHelpers.cpp  HmmHelpers.h  HmmPdfInterface.h  HmmTypes.h  InitialModelGenerator.cpp  InitialModelGenerator.h  LogMath.h  MatrixHelpers.cpp  MatrixHelpers.h  MultiObsSequence.cpp  MultiObsSequence.h  MultiObsSequenceHiddenMarkovModel.cpp  MultiObsSequenceHiddenMarkovModel.h  RandomHelpers.cpp  RandomHelpers.h  ReestimationResult.cpp  ReestimationResult.h  SaveStateInterface.h  SerializationHelpers.cpp  SerializationHelpers.h  TransitionRestrictionInterface.h
cpphmm/trainer/: CMakeLists.txt  hmmfactory.cpp  hmmfactory.h  input.cpp  input.h  main.cpp  trainer.cpp  trainer.h
cpphmm/unit-test/: CMakeLists.txt  signalgenerator.cpp  signalgenerator.h  testhmm.cpp  testmodels.cpp  testmultiobshmm.cpp
cpphmm/unit-test/gtest/include/gtest/internal/: gtest-linked_ptr.h
dl4j/protobuf/: neuralnet_pb2.py  package_net.py
dl4j/sleep-trainer/: pom.xml
hmm/: _BaseHMM.py
lfsr/: CMakeLists.txt  genlookup.py  gensinusoids.py  lfsr.c  main.c  main.cpp  pn.c  pn.h  upconvert.c
neuralnet_java_runner/: pom.xml
pillfeats/: MyPca.py  all_data.py  beta_binomial_pb2.py  data_windows.py  dbdata.py  decode.py  decode_mutliple_models.py  em.py  evaluate_day.py  extract_last_week.py  extract_pill_data.py  extractaccel.py  get_labels.py  hmm  initial_models.py  myhmm.py  old_package_protobuf.py  package_bayesnet_protobuf.py  package_protobuf.py  pca_pill_pairs.py  pillcsv.py  plot_pill_data.py  plot_pmf.py  plot_server_data.py  print_proto.py  pull_server_data_to_file.py  put_bayes.py  put_proto_in_table.py  segment_all_data.py  segment_pill_data.py  sensecsv.py  serverdata.py  sleep_hmm_bayesnet_pb2.py  sleep_hmm_pb2.py  surveycsv.py  test_audio_hmm.py  test_bayesian_approach.py  test_bayesian_approach2.py  test_continuous_hmm.py  test_hmm.py  (+2 more)
server_debug/: compare_prod_timeline.py  debug_do_feedback.py  debug_pull_feedback.py  debug_pull_server.py  debug_pull_timeline.py  debug_pull_timelinelog.py  debug_put_feedback.py  evaluate_labeled_data.sh  find_unique_models.py  get_labels_from_file.py  join_models.py  json_cat.py  online_hmm_pb2.py  parallel_pull_feedback.py  parallel_pull_timeline.py  parallel_pull_timeline_with_feedback.py  process_partner_filter_predictions.py  process_results.py  pull_partner_diff.py  research_generate_models.py  research_pull_all_feedback_by_email.py  research_pull_alphabet.py  research_pull_default_timeline.py  research_pull_feedback.py  research_pull_labels.py  research_pull_partner_filter_predictions.py  research_pull_timeline.py  research_pull_timelinelog.py
server_debug_bak/: analyze.py  countlogs.py  debug_pull_research.py  debug_put_feedback.py  find_unique_models.py  get_labels_from_file.py  join_models.py  parallel_pull_timeline_with_label_file.py  research_create_prior.py  research_pull_active_partner_accounts.py  research_pull_all_feedback_by_email.py  research_pull_feedback.py  research_pull_partner_feedback.py  research_pull_timeline.py  research_pull_timelinelog.py  to_base64.py  to_five_min_data.py
tiny-lstm/: CMakeLists.txt  gen_tables.py  tensor_utils.py  tinylstm.cpp  tinylstm_conv_layer.c  tinylstm_conv_layer.h  tinylstm_fullyconnected_layer.c  tinylstm_fullyconnected_layer.h  tinylstm_lstm_layer.c  tinylstm_lstm_layer.h  tinylstm_math.c  tinylstm_math.h  tinylstm_maxpoolrelu_layer.c  tinylstm_maxpoolrelu_layer.h  tinylstm_memory.h  tinylstm_net.c  tinylstm_net.h  tinylstm_tensor.c  tinylstm_tensor.h  tinylstm_types.h
tiny-lstm/unit-test/: biases1.c  foobars.c  ref1.c  test1.cpp  testconv.cpp  testfull.cpp  testlstm.cpp  testmaxpool.cpp  weights1.c
tiny-lstm/unit-test/data/: biases2.c  fullbiases.c  fullweights.c  image.c  image2.c  ref1.c  ref2.c  small_model_ref.c  weights1.c  weights2.c
(+158 files in other folders)
